# egami3

./: AUTHORS  BoxBrandingTest.py  ChangeLog  Navigation.py  PowerTimer.py  README.md  RecordTimer.py  ServiceReference.py  configure.ac  e2reactor.py  enigma2.bb  keyids.py  keymapparser.py  mytest.py  skin.py  timer.py  upgrade.py
data/: Makefile.am  keymap.ntr  (+5 more)
lib/python/Plugins/SystemPlugins/: Makefile.am  __init__.pyo
lib/python/Plugins/SystemPlugins/NetworkBrowser/: AutoMount.pyo  Makefile.am  MountEdit.pyo  MountManager.pyo  MountView.pyo  NetworkBrowser.pyo  UserDialog.pyo  UserManager.pyo  __init__.pyo  ipscan.pyo  plugin.pyo
lib/python/Plugins/SystemPlugins/NetworkBrowser/icons/: Makefile.am
lib/python/Plugins/SystemPlugins/NetworkBrowser/locale/: Makefile.am
lib/python/Plugins/SystemPlugins/NetworkBrowser/locale/ar/LC_MESSAGES/: NetworkBrowser.mo
lib/python/Plugins/SystemPlugins/NetworkBrowser/locale/bg/LC_MESSAGES/: NetworkBrowser.mo
lib/python/Plugins/SystemPlugins/NetworkBrowser/locale/ca/LC_MESSAGES/: NetworkBrowser.mo
lib/python/Plugins/SystemPlugins/NetworkBrowser/locale/cs/LC_MESSAGES/: NetworkBrowser.mo
lib/python/Plugins/SystemPlugins/NetworkBrowser/locale/da/LC_MESSAGES/: NetworkBrowser.mo
lib/python/Plugins/SystemPlugins/NetworkBrowser/locale/de/LC_MESSAGES/: NetworkBrowser.mo
lib/python/Plugins/SystemPlugins/NetworkBrowser/locale/el/LC_MESSAGES/: NetworkBrowser.mo
lib/python/Plugins/SystemPlugins/Toolkit/: Makefile.am  NTIVirtualKeyBoard.pyo  NotifiablePluginBrowser.pyo  SimpleThread.pyo  TagStrip.pyo  __init__.pyo  plugin.pyo
(+433 files in other folders)
